# aurora_os_old

./: .gitignore  Cargo.toml  README.md  aurora_kernel_init_state  aurora_kernel_syscalls  bochsrc  bochsrc_  build.rs  debug.gdb  elfdump.sh  entry.ld  epoch_kernel_syscalls  future_performance_optimizations  gen-img.sh  important_bugfixes  include_res.sh  kernel_state.txt  linea.sh  linker.ld  qemu_info_tlb_letter_meanings  run.sh  temp.txt  tmp.txt  todo  x86_64-os-userland.json  x86_64-os.json
boot/: initrd
boot/grub/: grub.cfg
fs/: build.sh
fs/initfs/: Cargo.toml  build.sh
initfs/: Cargo.toml  build.sh
initfs/.cargo/: config.toml
initfs/src/: main.rs  uses.rs
initrd/: build.sh  initrd
initrd/ahci-server/: Cargo.toml  build.sh
initrd/early-init/: Cargo.toml  build.sh
initrd/ext2-server/: Cargo.toml  (+1 more)
kernel/: Cargo.toml  build.rs  build.sh  count_lines.sh  epoch_kernel_syscalls  linker.ld  rustfmt.toml  temp.txt
kernel/.cargo/: config.toml
kernel/boot/grub/: grub.cfg
kernel/src/: '  cap.rs  config.rs  consts.rs  gdt.rs  id.rs  kdata.rs  key.rs  main.rs  mb2.rs  upriv.rs  uses.rs
kernel/src/acpi/: hpet.rs  madt.rs  mod.rs
kernel/src/arch/x64/: cpuid.rs  misc.asm  mod.rs  resources.asm
kernel/src/arch/x64/boot/: ap_boot.asm  mb2.asm
kernel/src/arch/x64/include/: asm_def.asm
kernel/src/arch/x64/int/: int.asm
kernel/src/arch/x64/syscall/: syscall.asm
kernel/src/cap/: mod.rs  sys.rs
kernel/src/int/: apic.rs  idt.rs  manager.rs  mod.rs  pic.rs
kernel/src/int/apic/: ioapic.rs  lapic.rs  mod.rs
kernel/src/ipc/: channel.rs  mod.rs
kernel/src/mem/: error.rs  heap.rs  kernel_heap.rs  mod.rs  phys_alloc.rs  shared_mem.rs  sys.rs  virt_alloc.rs
kernel/src/sched/: connection.rs  domain.rs  elf.rs  mod.rs  namespace.rs  process.rs  sync.rs  sys.rs  thread.rs
kernel/src/syscall/: consts.rs  mod.rs  udata.rs
kernel/src/time/: apic_timer.rs  mod.rs  pit.rs
kernel/src/util/: atomic.rs  cell.rs  cpu_marker.rs  error.rs  futex.rs  hwa_iter.rs  imutex.rs  io.rs  linked_list.rs  mem.rs  misc.rs  mod.rs  nlvec.rs  nlvecmap.rs  tree.rs
libutil/: Cargo.toml
src/: consts.rs  gdt.rs  kdata.rs  main.rs  mb2.rs  upriv.rs  uses.rs
std/: Cargo.toml
std/src/: ext.rs  io.rs  lib.rs  macros.rs  panicking.rs  rt.rs  uses.rs
std/src/os/aurora/: mod.rs
std/src/os/epoch/: sys.rs
sys/: Cargo.toml
sys_consts/: Cargo.toml  rustfmt.toml
util/: Cargo.toml
(+46 files in other folders)
