[package]
name = "os"
version = "0.1.0"
authors = ["Athryx <jack.x.roscoe@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bootloader = "0.9.16"
volatile = "0.2.6"
spin = "0.5.2"
concat-idents = "1.1.2"
x86 = "0.37.0"

[dependencies.lazy_static]
version = "1.0"
features = ["spin_no_std"]

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"

[package.metadata.cargo-sysroot]
target = "x86_64-os.json"
