[package]
name = "kernel"
version = "0.1.0"
authors = ["Athryx <jack.x.roscoe@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
volatile = "0.2.6"
spin = "0.5.2"
concat-idents = "1.1.2"
bitflags = "1.2.1"
modular-bitfield = "0.11.2"
x86_64 = "0.14.2"
lazy_static = { version = "1.0", features = ["spin_no_std"] }
sys_consts = { path = "../sys_consts/" }
libutil = { path = "../libutil/", features = ["kernel"] }

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"
debug = true

[package.metadata.cargo-sysroot]
target = "x86_64-os.json"
