[package]
name = "early-init"
version = "0.1.0"
authors = ["Athryx <jack.x.roscoe@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bitflags = "1.2.1"
lazy_static = { version = "1.0", features = ["spin_no_std"] }
std = { path = "../../std/" }

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"

[package.metadata.cargo-sysroot]
target = "../../x86_64-os-userland.json"
